# mai_archive

./: .gitignore  Cargo.toml
app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/.storybook/: main.js  preview.js
app/components/: AniNumber.tsx  Card.tsx  Header.tsx  Home.tsx  Icons.tsx  Settings.tsx  Sidebar.tsx  SignIn.tsx  SignUp.tsx  Toggle.tsx  User.tsx  index.ts
app/helpers/: interfaces.ts  theme.ts
app/helpers/api/: index.ts  types.ts  user.ts
app/helpers/hooks/: useLocalForage.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  state.rs  user.rs
app/styles/cards/: Card.ts  CardBody.ts  CardHeader.ts  index.ts
database/: README.md
database/prisma/: schema.prisma
database/prisma/migrations/20220527143434_initial/: migration.sql
database/prisma/migrations/20220528082828_relate_user_project/: migration.sql
database/prisma/migrations/20220608143918_initial_struct/: migration.sql
database/prisma/migrations/20220617033703_add_username/: migration.sql
database/prisma/migrations/20220628065613_add_timestamps/: migration.sql
database/prisma/migrations/20220629014504_add_unique/: migration.sql
src/: config.rs  data.rs  main.rs
src/database/: prisma_migrations.rs  project.rs  sea_orm_active_enums.rs
src/db/: mod.rs  prelude.rs  prisma_migrations.rs  project.rs  project_to_user.rs  user.rs
src/models/: mod.rs  user.rs
src/routes/: mod.rs  user.rs
src/util/: user.rs
