[package]
name = "mai_git"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde_json = "1.0.81"
env_logger = "0.9.0"
figlet-rs = "0.1.3"
log = "0.4.17"
dotenv = "0.15.0"
actix-http = "3.0.4"

[dependencies.sea-orm]
version = "0.8.0"
features = ["runtime-actix-rustls", "sqlx-postgres", "macros"]
