[package]
name = "mai_git"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde_json = "1.0.81"
env_logger = "0.9.0"
figlet-rs = "0.1.3"
log = "0.4.17"
dotenv = "0.15.0"
actix-http = "3.0.4"
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
derive_more = "0.99.17"
argon2 = "0.4.0"
rand = "0.8.5"
regex = "1.5.6"
lazy_static = "1.4.0"
sonyflake = "0.1.2"
chrono = "0.4.19"

[dependencies.sea-orm]
version = "0.8.0"
features = ["runtime-actix-native-tls", "sqlx-postgres", "macros"]
default-features = false
